# api-trigger-rinaacc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.http  project.md  pyproject.toml
src/rina_trigger_api/: api.py  client.py  config.py  service.py
src/rina_trigger_api/domain/: __init__.py  trigger_items.py
tests/: test_api_config.py  test_client.py  test_domain.py  test_e2e_real.py  test_integration_api.py  test_service.py
