[project]
name = "rina-trigger-api"
version = "0.1.0"
description = "API for RINA ACC accompaniment items mentioning trigger/gatilho."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.111",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=rina_trigger_api --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]

